--- a/src/containers/ExampleWorker/style.css
+++ b/src/containers/ExampleWorker/style.css
@@ -1,6 +1,5 @@
 body {
     display: flex;
-    align-items: center;
     justify-content: center;
     height: 100vh;
     width: 100%;
@@ -9,9 +8,18 @@ body {
     background-color: gainsboro;
 }
 
+/* For defualt */
+@media screen and (min-width: 540px) {
+    .container {
+        width: 920px;
+    }
+    body{
+        align-items: center;
+    }
+}
 
 .container{
-    width: 920px;
+
     background: #fffdff8c;
     padding: 10px;
     border-radius: 13px;
